# inhand-manipulation

./: examplot_plot.m  plot_animation.m  plot_animation_pen.m  plotcube.m  readme.md  runplanner.m  runplanner_pen.m  setup1.m  setup_pen_rotation.m
cpp/: CMakeLists.txt  contact_kinematics.cpp  contact_kinematics.h  planner.cpp  sample.cpp  sample.h  test.cpp  tree.cpp  tree.h  utilities.cpp  utilities.h
